Fixed page overflowing

--- a/src/app/styles/scss/fluent.scss
+++ b/src/app/styles/scss/fluent.scss
@@ -150,6 +150,7 @@ textarea.flex-stretch {
     display: flex;
     flex: 1;
     flex-direction: column;
+    min-height: 0;
 
     &.noscroll {
         overflow: hidden;
